--- a/jquery.tablescroll.css
+++ b/jquery.tablescroll.css
@@ -1,7 +1,8 @@
 .tablescroll
 { font: 12px normal Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif; background-color:#fff; }
 
-.tablescroll td, 
+.tablescroll td,
+.tablescroll th,
 .tablescroll_wrapper,
 .tablescroll_head,
 .tablescroll_foot
@@ -16,17 +17,11 @@
 .tablescroll_head
 { font-size:11px; font-weight:bold; background-color:#eee; border-left:0; border-top:0; margin-bottom:3px; }
 
-.tablescroll thead td
+.tablescroll th, .tablescroll td
 { border-right:0; border-bottom:0; }
 
-.tablescroll tbody td
-{ border-right:0; border-bottom:0; }
-
-.tablescroll tbody tr.first td
+.tablescroll tbody tr:first-of-type td
 { border-top:0; }
 
 .tablescroll_foot
 { font-weight:bold; background-color:#eee; border-left:0; border-top:0; margin-top:3px; }
-
-.tablescroll tfoot td
-{ border-right:0; border-bottom:0; }
